misc bug fixes ... still way too long

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,12 @@ h4{
     /* top:15%; */
 }
 
+input[type=file]{
+    color:transparent;
+    width:90px;
+}
+
+
 .functionButton{
     position:relative;
 }
